// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover match snapshot 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        content={
          <span>
            Hello!
          </span>
        }
        placement="top"
      >
        <WithStyles(Section)
          content={
            <span>
              Hello!
            </span>
          }
          innerRef={null}
          isExpandable={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "3": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          overrides={Object {}}
          placement="top"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
        >
          <Section
            classes={
              Object {
                "collapsed": "HoiPoi-Section-collapsed-0-2-6",
                "header": "HoiPoi-Section-header-0-2-2",
                "icon": "HoiPoi-Section-icon-0-2-4",
                "remove": "HoiPoi-Section-remove-0-2-5",
                "root": "HoiPoi-Section-root-0-2-1",
                "title": "HoiPoi-Section-title-0-2-3",
              }
            }
            content={
              <span>
                Hello!
              </span>
            }
            isExpandable={true}
            overrides={Object {}}
            placement="top"
          >
            <div
              className="HoiPoi-Section-root-0-2-1"
            >
              <JssContextSubscriber>
                <WithStyles(Button)
                  innerRef={null}
                  jssContext={
                    Object {
                      "disableStylesGeneration": false,
                      "jss": Jss {
                        "generateId": [Function],
                        "id": 2,
                        "options": Object {
                          "Renderer": [Function],
                          "createGenerateId": [Function],
                          "plugins": Array [],
                        },
                        "plugins": PluginsRegistry {
                          "plugins": Object {
                            "external": Array [
                              Object {
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                                "onUpdate": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                            ],
                            "internal": Array [
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                            ],
                          },
                          "registry": Object {
                            "onChangeValue": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onCreateRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessSheet": Array [],
                            "onProcessStyle": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onUpdate": Array [
                              [Function],
                            ],
                          },
                        },
                        "version": "10.0.0-alpha.16",
                      },
                      "managers": Object {
                        "1": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                        "3": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                      },
                      "sheetOptions": Object {
                        "classNamePrefix": "HoiPoi-",
                        "generateId": [Function],
                      },
                    }
                  }
                  overrides={Object {}}
                  size="medium"
                  theme={
                    Object {
                      "colors": Object {
                        "black": "#262B34",
                        "blackLight": "#5f656b",
                        "disabledGrey": "#ced4d9",
                        "green": "#86AD20",
                        "greenLight": "#e7f1d5",
                        "grey": "#697782",
                        "greyLight": "#f0f3f5",
                        "greySoft": "#788590",
                        "lines": "#dce3eb",
                        "link": "#216db3",
                        "linkDark": "#174a79",
                        "overlay": "rgba(33,33,33,0.55)",
                        "placeholders": "#e1e4e7",
                        "placeholdersHover": "#d0d4d8",
                        "primary": "#FF8C00",
                        "primaryDark": "#C87600",
                        "primaryLight": "#fef4e6",
                        "primarySoft": "#ff9d26",
                        "red": "#f04540",
                        "redDark": "#C43833",
                        "redLight": "#FAE7E7",
                        "redSoft": "#FF544F",
                        "secondary": "#00A8Be",
                        "secondaryGrey": "#e4eeff",
                        "secondaryLight": "#D6EEF2",
                        "secondarySoft": "#AADFE7",
                        "shadow": "rgba(0, 0, 0, 0.25)",
                        "tableHeader": "#f6f7f9",
                        "tableHover": "#FAFBFC",
                        "text": Object {
                          "black": "#3c4248",
                          "danger": "white",
                          "default": "#697782",
                          "green": "#86AD20",
                          "greySoft": "#788590",
                          "primary": "white",
                          "red": "#f04540",
                          "secondary": "#00A8Be",
                          "white": "#FFFFFF",
                          "yellow": "#E9B200",
                        },
                        "transparentBlack": "rgba(38, 43, 52, 0.8)",
                        "white": "#FFFFFF",
                        "yellow": "#E9B200",
                        "yellowLight": "#FFF9DD",
                      },
                      "effects": Object {
                        "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                        "buttonActive": Object {
                          "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                        },
                      },
                      "typography": Object {
                        "bigText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 16,
                          "letterSpacing": 0.5,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "lineHeight": 1.5,
                        },
                        "defaultText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 13,
                          "letterSpacing": 0.5,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                        "fontSizeBase": 13,
                        "fontSizeSmall": 11,
                        "letterSpacing": 0.5,
                        "lineHeightBase": 1.5,
                        "smallText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "letterSpacing": 0.5,
                        },
                      },
                    }
                  }
                  type="filled"
                >
                  <Button
                    classes={
                      Object {
                        "big": "HoiPoi-Button-big-0-2-17",
                        "danger": "HoiPoi-Button-danger-0-2-15",
                        "disabled": "HoiPoi-Button-disabled-0-2-18",
                        "fullWidth": "HoiPoi-Button-fullWidth-0-2-19",
                        "label": "HoiPoi-Button-label-0-2-8",
                        "labelLoading": "HoiPoi-Button-labelLoading-0-2-9",
                        "loader": "HoiPoi-Button-loader-0-2-10",
                        "outlined": "HoiPoi-Button-outlined-0-2-11",
                        "primary": "HoiPoi-Button-primary-0-2-14",
                        "root": "HoiPoi-Button-root-0-2-7",
                        "small": "HoiPoi-Button-small-0-2-16",
                        "squared": "HoiPoi-Button-squared-0-2-12",
                        "white": "HoiPoi-Button-white-0-2-13",
                      }
                    }
                    overrides={Object {}}
                    size="medium"
                    type="filled"
                  >
                    <button
                      className="HoiPoi-Button-root-0-2-7 undefined HoiPoi-Button-white-0-2-13"
                      type="button"
                    >
                      <span
                        className=""
                      >
                        <span
                          className="HoiPoi-Button-label-0-2-8"
                        >
                          top
                        </span>
                      </span>
                    </button>
                  </Button>
                </WithStyles(Button)>
              </JssContextSubscriber>
            </div>
          </Section>
        </WithStyles(Section)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Popover visible match snapshot 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        content={
          <span>
            Hello!
          </span>
        }
        placement="top"
      >
        <WithStyles(Section)
          content={
            <span>
              Hello!
            </span>
          }
          innerRef={null}
          isExpandable={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "3": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          overrides={Object {}}
          placement="top"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
        >
          <Section
            classes={
              Object {
                "collapsed": "HoiPoi-HoiPoi-Section-collapsed-0-2-25",
                "header": "HoiPoi-HoiPoi-Section-header-0-2-21",
                "icon": "HoiPoi-HoiPoi-Section-icon-0-2-23",
                "remove": "HoiPoi-HoiPoi-Section-remove-0-2-24",
                "root": "HoiPoi-HoiPoi-Section-root-0-2-20",
                "title": "HoiPoi-HoiPoi-Section-title-0-2-22",
              }
            }
            content={
              <span>
                Hello!
              </span>
            }
            isExpandable={true}
            overrides={Object {}}
            placement="top"
          >
            <div
              className="HoiPoi-HoiPoi-Section-root-0-2-20"
            >
              <JssContextSubscriber>
                <WithStyles(Button)
                  innerRef={null}
                  jssContext={
                    Object {
                      "disableStylesGeneration": false,
                      "jss": Jss {
                        "generateId": [Function],
                        "id": 2,
                        "options": Object {
                          "Renderer": [Function],
                          "createGenerateId": [Function],
                          "plugins": Array [],
                        },
                        "plugins": PluginsRegistry {
                          "plugins": Object {
                            "external": Array [
                              Object {
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                                "onUpdate": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                            ],
                            "internal": Array [
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                            ],
                          },
                          "registry": Object {
                            "onChangeValue": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onCreateRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessSheet": Array [],
                            "onProcessStyle": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onUpdate": Array [
                              [Function],
                            ],
                          },
                        },
                        "version": "10.0.0-alpha.16",
                      },
                      "managers": Object {
                        "1": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                        "3": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                      },
                      "sheetOptions": Object {
                        "classNamePrefix": "HoiPoi-HoiPoi-",
                        "generateId": [Function],
                      },
                    }
                  }
                  overrides={Object {}}
                  size="medium"
                  theme={
                    Object {
                      "colors": Object {
                        "black": "#262B34",
                        "blackLight": "#5f656b",
                        "disabledGrey": "#ced4d9",
                        "green": "#86AD20",
                        "greenLight": "#e7f1d5",
                        "grey": "#697782",
                        "greyLight": "#f0f3f5",
                        "greySoft": "#788590",
                        "lines": "#dce3eb",
                        "link": "#216db3",
                        "linkDark": "#174a79",
                        "overlay": "rgba(33,33,33,0.55)",
                        "placeholders": "#e1e4e7",
                        "placeholdersHover": "#d0d4d8",
                        "primary": "#FF8C00",
                        "primaryDark": "#C87600",
                        "primaryLight": "#fef4e6",
                        "primarySoft": "#ff9d26",
                        "red": "#f04540",
                        "redDark": "#C43833",
                        "redLight": "#FAE7E7",
                        "redSoft": "#FF544F",
                        "secondary": "#00A8Be",
                        "secondaryGrey": "#e4eeff",
                        "secondaryLight": "#D6EEF2",
                        "secondarySoft": "#AADFE7",
                        "shadow": "rgba(0, 0, 0, 0.25)",
                        "tableHeader": "#f6f7f9",
                        "tableHover": "#FAFBFC",
                        "text": Object {
                          "black": "#3c4248",
                          "danger": "white",
                          "default": "#697782",
                          "green": "#86AD20",
                          "greySoft": "#788590",
                          "primary": "white",
                          "red": "#f04540",
                          "secondary": "#00A8Be",
                          "white": "#FFFFFF",
                          "yellow": "#E9B200",
                        },
                        "transparentBlack": "rgba(38, 43, 52, 0.8)",
                        "white": "#FFFFFF",
                        "yellow": "#E9B200",
                        "yellowLight": "#FFF9DD",
                      },
                      "effects": Object {
                        "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                        "buttonActive": Object {
                          "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                        },
                      },
                      "typography": Object {
                        "bigText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 16,
                          "letterSpacing": 0.5,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "lineHeight": 1.5,
                        },
                        "defaultText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 13,
                          "letterSpacing": 0.5,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                        "fontSizeBase": 13,
                        "fontSizeSmall": 11,
                        "letterSpacing": 0.5,
                        "lineHeightBase": 1.5,
                        "smallText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "letterSpacing": 0.5,
                        },
                      },
                    }
                  }
                  type="filled"
                >
                  <Button
                    classes={
                      Object {
                        "big": "HoiPoi-HoiPoi-Button-big-0-2-36",
                        "danger": "HoiPoi-HoiPoi-Button-danger-0-2-34",
                        "disabled": "HoiPoi-HoiPoi-Button-disabled-0-2-37",
                        "fullWidth": "HoiPoi-HoiPoi-Button-fullWidth-0-2-38",
                        "label": "HoiPoi-HoiPoi-Button-label-0-2-27",
                        "labelLoading": "HoiPoi-HoiPoi-Button-labelLoading-0-2-28",
                        "loader": "HoiPoi-HoiPoi-Button-loader-0-2-29",
                        "outlined": "HoiPoi-HoiPoi-Button-outlined-0-2-30",
                        "primary": "HoiPoi-HoiPoi-Button-primary-0-2-33",
                        "root": "HoiPoi-HoiPoi-Button-root-0-2-26",
                        "small": "HoiPoi-HoiPoi-Button-small-0-2-35",
                        "squared": "HoiPoi-HoiPoi-Button-squared-0-2-31",
                        "white": "HoiPoi-HoiPoi-Button-white-0-2-32",
                      }
                    }
                    overrides={Object {}}
                    size="medium"
                    type="filled"
                  >
                    <button
                      className="HoiPoi-HoiPoi-Button-root-0-2-26 undefined HoiPoi-HoiPoi-Button-white-0-2-32"
                      type="button"
                    >
                      <span
                        className=""
                      >
                        <span
                          className="HoiPoi-HoiPoi-Button-label-0-2-27"
                        >
                          top
                        </span>
                      </span>
                    </button>
                  </Button>
                </WithStyles(Button)>
              </JssContextSubscriber>
            </div>
          </Section>
        </WithStyles(Section)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
